== 0.23.5

* Enhancements
  * Project JSON API returns whether or not the project has been favorited
  * Project JSON API returns project specific tags

* Bug Fix
  * Sticky links no longer overlap the complete sticky checkmark box on the calendar view

== 0.23.4

* Enhancements
  * Project JSON API returns color
  * User JSON API returns user authentication_token, first_name, last_name, email, and id on successful login
  * Increased width of description text areas to be consistent with other text areas

== 0.23.3

* Bug Fix
  * Dragging groups now correctly prompts user to select all, completed, or single sticky
    * Due to a change in Rails 3.2.7 to Rails 3.2.8 how data attributes are specified in divs

== 0.23.2

* Enhancements
  * Updated to Rails 3.2.8

== 0.23.1

* Enhancements
  * Sticky JSON API filters
    * owner_id: me, returns stickies assigned to the current user
    * unassigned: 1, returns stickies that are not assigned to a specific user
    * due_date_start_date and due_date_end_date can be specified as mm/dd/yy or mm/dd/yyyy
  * Sticky JSON API returns group_description
  * Updated to Rails 3.2.7
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * Daily Digest emails now include stickies created/completed, and comments created over the weekend in the monday digest
  * Project invites now display the invite url, and display who invited the user by mousing over the email

* Bug Fix
  * Height of the drop down menu for sticky exports is now consistent with other drop down menus
  * Tags filters on stickies page no longer use colors for deleted tags

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.23.0

* Enhancements
  * Daily digest emails are now available for users who prefer a digest of the previous day included stickies added, completed, and comments made
  * Stickies can now be reassigned to another user in bulk from the project page