@@ -6,6 +6,7 @@
 
 * Bug Fix
   * Sticky links no longer overlap the complete sticky checkmark box on the calendar view
+  * When deleting frames, tags, and templates, the user is now redirected to the project specific frames, tags, or templates index
 
 == 0.23.4
 
